Extracted a constant